# podcast-analytics

./: README.md  pyproject.toml
notebooks/: 01_video-transcript.ipynb
podcast-analytics/: README.md  pyproject.toml
podcast-analytics/conf/base/: logging.yml
podcast-analytics/docs/source/: conf.py  index.rst
podcast-analytics/notebooks/: 01_playlist-metadata-download.ipynb  02_video-transcript.ipynb
podcast-analytics/src/: setup.py
podcast-analytics/src/podcast_analytics/: __init__.py  __main__.py  settings.py
podcast-analytics/src/tests/: test_run.py
